# rindex

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
rindex/: __init__.py  c_rindex.pyx  pypy_rindex.py  rindex.py
tests/: .gitignore  benchmark.py  test_rindex.py
