[build-system]
requires = [
    "setuptools==69.0.2",
    "wheel==0.42.0",
    "Cython==3.1.5",
]

[project]
name = "rindex"
version = "1.1.1"
description = "rindex() function for sequences"
requires-python = ">=3.8"
authors = [{name = "Sóla Lusøt"}]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/solaluset/rindex"

[tool.setuptools]
packages = ["rindex"]
zip-safe = false

[tool.setuptools.package-data]
rindex = ["*.pyx", "py.typed"]

[tool.cibuildwheel]
skip = "pp*"
test-command = "pytest {project}/tests"
test-requires = "pytest"
test-skip = "*-{win,macosx}_arm64"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
